[tool.poetry]
name = "cesar"
version = "0.1.0"
description = "Implementação da cifra de cesar!"
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.7.0"
isort = "^5.10.1"
mkdocs = "^1.2.3"
prospector = "^1.6.0"
pip-audit = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
